# marketmaker

./: .gitignore  README.md  data.py  discrete_hmm.py  gaussian_hmm.py  hmm.py  main.py  pyproject.toml  requirements.txt
marketmaker/: __init__.py  data.py  gaussian_hmm.py  utils.py
