[tool.poetry]
name = "marketmaker"
version = "0.1.0"
description = ""
authors = ["Carson Bring <carsonbring@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
pandas = "^2.2.3"
requests = "^2.32.3"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
