[project]
name = "marketmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.13",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "torch>=2.6.0",
]
